--- a/src/index.css
+++ b/src/index.css
@@ -39,5 +39,5 @@ h3 {
     @apply flex items-center gap-x-[5px] font-semibold text-priBold;
 }
 button {
-    @apply flex items-center justify-center gap-x-[10px] font-semibold text-sm py-[12px] px-[30px] rounded-[5px] text-secBold bg-priColor border border-solid border-priColor shadow-lg cursor-pointer transition-colors duration-200 ease-out hover:bg-[#085dc5] hover:border-[#085dc5] active:opacity-90;
+    @apply flex items-center justify-center gap-x-[10px] font-semibold text-sm py-[12px] px-[30px] rounded-[5px] text-secBold bg-priColor border border-solid border-priColor shadow-md cursor-pointer transition-colors duration-200 ease-out hover:bg-[#085dc5] hover:border-[#085dc5] active:opacity-90;
 }
