--- a/src/components/dashboard-page/dashboard.css
+++ b/src/components/dashboard-page/dashboard.css
@@ -1,5 +1,5 @@
 .dashboard {
-    @apply bg-secBG p-[20px] my-[70px];
+    @apply bg-secBG p-[20px] my-[70px] min-h-screen;
     @apply lg:mb-0 lg:ml-[270px];
 }
 .dashboard-cntnr {
