--- a/src/components/inprogress-page/inprogress.css
+++ b/src/components/inprogress-page/inprogress.css
@@ -1,4 +1,35 @@
 .inprogress {
-    @apply bg-secBG p-[20px] my-[70px] h-screen;
+    @apply bg-secBG p-[20px] my-[70px] min-h-screen;
     @apply lg:mb-0 lg:ml-[270px];
+}
+.inprogress-cntnr {
+    @apply flex flex-col gap-y-[10px];
+}
+.inprogress-cntnr > p {
+    @apply mb-[20px];
+}
+.inprogress-grid {
+    @apply grid grid-cols-1 gap-x-[25px] gap-y-[20px];
+    @apply md:grid-cols-2 xl:grid-cols-3;
+}
+.inprogress-grid > div {
+    @apply flex flex-col gap-y-[10px] bg-priBG shadow-md p-[20px] rounded-[5px];
+}
+.inprogress-grid > div > p:nth-of-type(2) {
+    @apply flex items-center gap-x-[10px] mb-[10px] font-semibold text-priBold;
+}
+.inprogress-grid > div > p:nth-of-type(2) > span {
+    @apply text-[1rem];
+}
+.inprogress-grid > div > p:nth-of-type(3) {
+    @apply mb-[10px];
+}
+.inprogress-grid > div > div {
+    @apply flex justify-end gap-x-[30px] mt-auto;
+}
+.inprogress-grid > div > div button {
+    @apply rounded-none shadow-none gap-x-[5px] p-0 bg-transparent border-none font-normal text-[#808080];
+}
+.inprogress-grid > div > div button > span {
+    @apply text-[20px];
 }
