--- a/src/components/completed-page/completed.css
+++ b/src/components/completed-page/completed.css
@@ -30,6 +30,6 @@
 .completed-grid > div > div button {
     @apply rounded-none shadow-none gap-x-[5px] p-0 bg-transparent border-none font-normal text-[#808080];
 }
-.completed-grid > div > div button > span {
+.completed-grid > div > div button span {
     @apply text-[20px];
 }
