--- a/src/components/todo-page/todo.css
+++ b/src/components/todo-page/todo.css
@@ -30,6 +30,6 @@
 .todo-grid > div > div button {
     @apply rounded-none shadow-none gap-x-[5px] p-0 bg-transparent border-none font-normal text-[#808080];
 }
-.todo-grid > div > div button > span {
+.todo-grid > div > div button span {
     @apply text-[20px];
 }
